chore: normalise sessions creation
